change code and layout problem try to fix

--- a/responsive.css
+++ b/responsive.css
@@ -45,7 +45,8 @@
 
     .image-container > .mic-img img {
         max-width: 70px;
-        top: 40%; 
+        position: absolute;
+        top: -6%;
     }
 
     .tool-bar > span {
@@ -163,7 +164,16 @@
         justify-content: center;
         margin-left: 0;
     }
-
+    .banner-section {
+    background-image: url("images/hero-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+   
+    width: 100%;
+    height:auto;
+    position: relative;
+}
     
     footer > .nav-logo > h2 {
         font-size: 2.5rem;
@@ -180,4 +190,12 @@
         max-width: 100%;
         text-align: center;
     }
+    ul a {
+    display: inline;
+    align-items: center;
+    gap: 10px;
+    color: #a394b8;
+    font-size: 16px;
+    padding-top: 20px;
+}
 }
